<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type">Type</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="features">Features</string>
    <string name="surface">Surface</string>
    <string name="rooms">Rooms</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="address">Address</string>
    <string name="gps_coordinates">GPS coordinates</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="country">Country</string>
    <string name="points_of_interest">Points of interest</string>
    <string name="bus">Bus</string>
    <string name="school">School</string>
    <string name="airport">Airport</string>
    <string name="train">Train</string>
    <string name="park">Park</string>
    <string name="restaurant">Restaurant</string>
    <string name="agent">Agent</string>
    <string name="agent_in_charge">Agent in charge</string>
    <string name="date_of_publication">Date of publication</string>
    <string name="photos">Photos</string>
    <string name="add_picture">Add picture</string>
    <string name="take_picture">take picture</string>
    <string name="property_sold">Property Sold</string>
    <string name="save">save</string>
    <string name="dismiss">DISMISS</string>
    <string name="separator">separator</string>
    <string name="separator2">separator2</string>
    <string name="property_type">Type</string>
    <string name="house_price">House price</string>
    <string name="down_payment">Down payment</string>
    <string name="loan_amount">LOAN AMOUNT</string>
    <string name="_0">0 $</string>
    <string name="interest_rate">Interest rate</string>
    <string name="duration_years">Duration (years)</string>
    <string name="monthly_payment">MONTHLY PAYMENT</string>
    <string name="_800">800 $</string>
    <string name="splash_image">splash image</string>
    <string name="please_enter_photo_title">please enter photo title</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="property_photo">property photo</string>
    <string name="picture_of_property">picture of property</string>
    <string name="please_enter_a_title_for_the_picture">please enter a title for the picture</string>
    <string name="photo_of_a_property">photo of a property</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="minimum_price">minimum price</string>
    <string name="maximum_price">maximum price</string>
    <string name="minimum_surface">minimum surface</string>
    <string name="maximum_surface">maximum surface</string>
    <string name="logo">logo</string>
    <string name="main_property_photo">main property photo</string>
    <string name="staticmap">staticmap</string>
    <string name="_385_wilson_avenue">385 Wilson avenue</string>
    <string name="_80022">80022</string>
    <string name="denver">Denver</string>
    <string name="ile_de_france">Ile de France</string>
    <string name="united_states">United States</string>
    <string name="number_of_bathrooms">Number of bathrooms</string>
    <string name="_2">2</string>
    <string name="number_of_bedrooms">Number of bedrooms</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="_5">5</string>
    <string name="lorem_ipsum_dolor">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="mike">Mike</string>
    <string name="sale_status">Sale status</string>
    <string name="available_for_sale">available for sale</string>
    <string name="on_sale_date">On-sale date</string>
    <string name="_23_02_2023">23/02/2023</string>
    <string name="date_of_sale">Date of sale</string>
    <string name="not_yet_sold">not yet sold</string>
    <string name="location">Location</string>
    <string name="_215">215</string>
    <string name="_3">3</string>
    <string name="_3000_000">3000,000</string>
    <string name="house">House</string>
    <string name="point_of_interest">Point of interest :</string>
    <string name="add_button">add_button</string>
    <string name="delete_button">delete button</string>
    <string name="delete">delete</string>
    <string name="garden">GARDEN</string>
    <string name="_4_rue_des_bergeries">4 rue des bergeries</string>
    <string name="flat">Flat</string>
    <string name="new_york">New-York</string>
    <string name="_1_000_000">1.000.000</string>
    <string name="sold">SOLD</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="bank_loan">Bank loan</string>
    <string name="search_property">search property</string>
    <string name="edit_property">edit property</string>
    <string name="property_created">property_created</string>
    <string name="please_enter_valid_numbers">Please enter valid numbers</string>
    <string name="please_fill_all_the_required_fields">Please fill all the required fields</string>
    <string name="please_add_at_least_one_photo">please add at least one photo</string>
    <string name="please_enter_an_address_manually">please enter an address manually</string>
    <string name="please_choose_a_photo">please choose a photo</string>
    <string name="please_enter_a_description">please enter a description</string>
    <string name="photo_missing">photo missing</string>
    <string name="unable_to_load_photo">unable to load photo</string>
    <string name="choose_a_photo">choose a photo</string>
    <string name="property_status">Property status</string>
    <string name="all">All</string>
    <string name="minimum_photos">Minimum photos</string>

</resources>