<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_property"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="?selectableItemBackground">

    <androidx.cardview.widget.CardView
        android:id="@+id/property_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="#E0D1FA"
        app:cardCornerRadius="25dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/property_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/property_photo"
                android:padding="2dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/property_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:hint="@string/flat"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/property_county"
                app:layout_constraintStart_toEndOf="@id/property_photo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/property_county"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:hint="@string/new_york"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/property_price"
                app:layout_constraintStart_toEndOf="@id/property_photo"
                app:layout_constraintTop_toBottomOf="@+id/property_type" />

            <TextView
                android:id="@+id/property_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:hint="@string/_1_000_000"
                android:textColor="#673AB7"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/property_photo"
                app:layout_constraintTop_toBottomOf="@id/property_county" />

            <TextView
                android:id="@+id/is_sold_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sold"
                android:textColor="#70F60000"
                android:textSize="55sp"
                android:textStyle="bold"
                android:visibility="invisible" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>