<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchPropertyActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/back_arrow"
            app:title="Search property"
            app:titleTextColor="@color/white" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/type"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/proptype"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="12dp"
            app:boxBackgroundColor="#89D8FB"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxStrokeColor="#0099E8"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="3dp"
            app:endIconMode="dropdown_menu"
            app:endIconTint="#673AB7"
            app:layout_constraintTop_toBottomOf="@id/tv_type"
            app:placeholderTextColor="@color/black">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/type_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/price"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/proptype" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/prop_price_min"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="6dp"
            app:boxBackgroundColor="#D2B3F8"
            app:endIconMode="clear_text"
            app:endIconTint="#673AB7"
            app:layout_constraintEnd_toStartOf="@id/prop_price_max"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_price">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price_min"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_baseline_attach_money_24"
                android:hint="@string/minimum_price"
                android:inputType="number"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/prop_price_max"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            app:boxBackgroundColor="#D2B3F8"
            app:endIconMode="clear_text"
            app:endIconTint="#673AB7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/prop_price_min"
            app:layout_constraintTop_toBottomOf="@id/tv_price">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price_max"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_baseline_attach_money_24"
                android:hint="@string/maximum_price"
                android:inputType="number"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_surface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/surface"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/prop_price_min" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/prop_surface_minimum"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="6dp"
            app:boxBackgroundColor="#D2B3F8"
            app:endIconMode="clear_text"
            app:endIconTint="#673AB7"
            app:layout_constraintEnd_toStartOf="@id/prop_surface_maximum"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_surface">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surface_minimum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_surface_2"
                android:gravity="center"
                android:hint="@string/minimum_surface"
                android:inputType="number"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/prop_surface_maximum"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            app:boxBackgroundColor="#D2B3F8"
            app:endIconMode="clear_text"
            app:endIconTint="#673AB7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/prop_surface_minimum"
            app:layout_constraintTop_toBottomOf="@id/tv_surface">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surface_maximum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_surface_2"
                android:gravity="center"
                android:hint="@string/maximum_surface"
                android:inputType="number"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/city"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/prop_surface_minimum" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_city"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="12dp"
            app:boxBackgroundColor="#D2B3F8"
            app:endIconMode="clear_text"
            app:endIconTint="#673AB7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_city">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_baseline_location_24"
                android:hint="@string/city"
                android:inputType="textCapWords"
                android:textSize="15sp"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="15dp"
            android:text="@string/property_status"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_city" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/prop_sold_status"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="12dp"
            app:boxBackgroundColor="#89D8FB"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxStrokeColor="#0099E8"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="3dp"
            app:endIconMode="dropdown_menu"
            app:endIconTint="#673AB7"
            app:layout_constraintTop_toBottomOf="@id/tv_status"
            app:placeholderTextColor="@color/black">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/sold_status_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sale_status"
                android:inputType="none"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_minimum_photos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="15dp"
            android:text="@string/minimum_photos"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/prop_sold_status" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/prop_minimum_photos"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="12dp"
            app:boxBackgroundColor="#D2B3F8"
            app:endIconMode="clear_text"
            app:endIconTint="#673AB7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_minimum_photos">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/minimum_photos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/minimum_photos"
                android:inputType="number"
                android:textSize="15sp"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/point_of_interest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="12dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/prop_minimum_photos">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points_of_interest"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox_bus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="#673AB7"
                    android:text="@string/bus" />

                <CheckBox
                    android:id="@+id/checkbox_school"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="#673AB7"
                    android:text="@string/school" />

                <CheckBox
                    android:id="@+id/checkbox_airport"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="#673AB7"
                    android:text="@string/airport" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox_train"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="#673AB7"
                    android:text="@string/train" />

                <CheckBox
                    android:id="@+id/checkbox_park"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="#673AB7"
                    android:text="@string/park" />

                <CheckBox
                    android:id="@+id/checkbox_restaurant"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="#673AB7"
                    android:text="@string/restaurant" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/validate_parameters_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/point_of_interest" />

        <Button
            android:id="@+id/clear_parameters_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/clear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/validate_parameters_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>