<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="150dp"
    android:layout_margin="1dp"

    android:src="@drawable/ic_launcher_background">

    <ImageView
        android:id="@+id/item_property_photo_detail"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/property_photo"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="#88000000"
        app:layout_constraintBottom_toBottomOf="@id/item_property_photo_detail"
        app:layout_constraintStart_toStartOf="@id/item_property_photo_detail"
        app:layout_constraintEnd_toEndOf="@id/item_property_photo_detail"/>

    <TextView
        android:id="@+id/item_property_photo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/garden"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@id/item_property_photo_detail"
        app:layout_constraintEnd_toEndOf="@id/item_property_photo_detail"
        app:layout_constraintStart_toStartOf="@id/item_property_photo_detail" />

    <ImageButton
        android:id="@+id/delete_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:background="@color/white"
        android:contentDescription="@string/delete"
        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintBottom_toBottomOf="@id/item_property_photo_detail"
        app:layout_constraintStart_toEndOf="@id/item_property_photo_detail"
        app:layout_constraintTop_toTopOf="@id/item_property_photo_detail"
        />

</androidx.constraintlayout.widget.ConstraintLayout>